--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Splitwiser</title>
+        <title>Dukaan</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./index.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
